# ds-ml

./: .pre-commit-config.yaml  Brewfile  CHANGELOG.md  LICENSE  Makefile  README.md  make.ps1  pyproject.toml  setup.py
docs/: Makefile  conf.py  glossary.md  index.rst  make.bat
notebooks/: montaigne_prep.ipynb
notebooks/algorithms/: 1.0-kb-markov-chains.ipynb
notebooks/data/: 1.0-kb-prepare-montaigne.ipynb
src/common/: __init__.py
src/common/interfaces/: IMarkov.py  __init__.py
src/common/models/: markov.py
src/tests/: test_common_interfaces.py  test_common_models_markov.py
