[tool.poetry]
name = "ds-ml"
version = "0.1.0"
description = "A project for performing data science work."
authors = ["Kevin Boehm <kmbhm1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ds_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.5"
pandas = "^2.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
